Изменили заголовки сайта

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html> 
 
 <head> 
-	<title>Kurdash</title>
+	<title>Kurdash.kg</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
